# Synapthema

./: .env.example  .gitignore  DEPLOYMENT_CURRENT_STATE.md  MOBILE_WEBSITE_DEPLOYMENT.md  README.md  app.py  main.py  package.json  pyproject.toml
docs/: architecture_next.md  backlog.md  integration_gaps.md  learning_science.md  llm_failure_modes.md  platform_analysis.md  product_vision.md
src/: __init__.py  checkpoint.py  config.py  pipeline.py  protocols.py
src/extraction/: __init__.py  multi_doc.py  pdf_parser.py  structure_detector.py  types.py
src/profiles/: __init__.py  base.py  general.py  scientific.py
src/rendering/: __init__.py  html_generator.py  mermaid_validate.mjs  mermaid_validator.py
src/rendering/templates/: _fsrs.js  _help_modal.html  _learner_model.js  base.html  index.html  mixed_review.html  review.html  styles.css
src/rendering/templates/elements/: _analogy.html  _categorization.html  _concept_map.html  _error_detection.html  _far_transfer.html  _fill_in_the_blank.html  _flashcard.html  _interactive_essay.html  _interactive_visualization.html  _matching.html  _mermaid.html  _ordering.html  _quiz.html  _section_intro.html  _slide.html  _worked_example.html
src/transformation/: __init__.py  analysis_types.py  concept_consolidator.py  content_designer.py  content_designer_prompts.py  content_pre_analyzer.py  curriculum_planner.py  deep_reader.py  llm_client.py  prompts.py  section_matching.py  types.py  viz_opportunity.py
tests/: conftest.py  test_analysis_types.py  test_bug_fixes.py  test_checkpoint.py  test_concept_consolidator.py  test_content_designer.py  test_content_pre_analyzer.py  test_curriculum_planner.py  test_deep_reader.py  test_llm_client.py  test_mermaid_validator.py  test_multi_doc.py  test_pipeline_checkpointing.py  test_profiles.py  test_prompts.py  test_rendering.py  test_structure_detector.py  test_types.py  test_unicode_math.py  test_viz_opportunity.py
