[project]
name = "learningxp-generator"
version = "0.1.0"
description = "PDF-to-Interactive-Training pipeline: extracts PDF content, transforms it via LLM, renders interactive HTML courses"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "Pillow>=10.0.0",
    "Jinja2>=3.1.0",
    "markdown>=3.5.0",

    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "instructor>=1.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
learningxp = "src.pipeline:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
